# ezdsl

./: DESIGN.md  README.md  pyproject.toml  type_soundness_analysis.md
.github/workflows/: publish-typedsl.yml
examples/: 03_node_signatures.py
ezdsl/: pyproject.toml
ezdsl/src/ezdsl/: __init__.py  core.py  types.py
ezdsl/tests/: test_generic_node.py  test_node_generic_example.py
src/nanodsl/: __init__.py  adapters.py  ast.py  nodes.py  schema.py  serialization.py  types.py
src/typedsl/: adapters.py  nodes.py  schema.py  types.py
tests/: test_ast.py  test_generic_node.py  test_generic_specific_nodes.py  test_integration.py  test_node_generic_example.py  test_nodes.py  test_schema.py  test_serialization.py  test_signature.py  test_types.py  test_union_extraction_bug.py
tutorial/: GETTING_STARTED.md  TYPE_PARAMETERS.md
