[project]
name = "nanoDSL"
version = "0.1.0"
description = "A type-safe node system for building ASTs and DSLs in Python 3.12+"
readme = "README.md"
authors = [
    { name = "Jim Lundin", email = "JimLundin@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.19.0", "pyright>=1.1.407", "pytest>=9.0.1", "ruff>=0.14.7"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = ["T201"]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
]
