[project]
name = "typeDSL"
version = "0.1.0"
description = "A type-safe node system for building ASTs and DSLs in Python 3.12+"
readme = "README.md"
authors = [
    { name = "Jim Lundin", email = "JimLundin@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["mypy>=1.19.0", "pyright>=1.1.407", "pytest>=9.0.1", "ruff>=0.14.7"]

[tool.mypy]
strict = true

[tool.pyright]
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
root = "src/typedsl"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnnecessaryIsInstance = "warning"  # Defensive checks for invalid inputs are fine

[tool.ruff]
unsafe-fixes = true

[tool.ruff.lint]
fixable = ["ALL"]
select = ["ALL"]
ignore = [
    "D102",    # missing docstrings in public methods
    "D105",    # missing docstrings in magic methods
    "D203",    # incompatible with D211
    "D213",    # incompatible with D212
    "COM812",  # trailing comma - conflicts with formatter
    "TC006",   # quotes in cast - style preference
    "SIM102",  # nested if - style preference, can be clearer
]

[tool.ruff.lint.per-file-ignores]
# Type manipulation modules legitimately use Any
"src/typedsl/types.py" = ["ANN401"]
"src/typedsl/schema.py" = ["ANN401", "C901", "PLR0911", "PLR0912"]  # extract_type complexity is inherent
"src/typedsl/adapters.py" = ["ANN401"]
"src/typedsl/serialization.py" = ["PLR2004"]  # magic 10 in error message is fine

"test_*.py" = [
    "S101",    # asserts allowed in tests
    "S102",    # exec allowed in tests
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant
    "FBT",     # Don't care about booleans as positional arguments in tests
    "PLR2004", # Magic value used in comparison
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
    "PLC0415", # imports inside functions allowed in tests
    "ERA001",  # commented-out code allowed in tests for documentation
    "D205",    # docstring formatting relaxed in tests
    "N806",    # variable naming relaxed in tests
    "PT011",   # pytest.raises match parameter not required
    "PGH003",  # type ignore specificity not required in tests
    "SLF001",  # private member access allowed in tests
    "ANN401",  # Any allowed in tests
]
